[package]
categories = ["command-line-utilities", "development-tools"]
description = "A CLI tool for managing cron jobs with Apalis"
edition = "2021"
keywords = ["cron", "cli", "apalis", "task scheduler", "command line"]
license = "MIT"
name = "crony-cli"
repository = "https://github.com/durocodes/crony"
version = "0.1.0"

[[bin]]
name = "crony"
path = "src/main.rs"

[dependencies]
apalis = {version = "0.7.2", features = ["retry"]}
apalis-cron = "0.7.2"
chrono = "0.4.41"
clap = {version = "4.0", features = ["derive"]}
cliclack = "0.3.6"
console = "0.15.11"
regex = "1.11.1"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"]}
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
